--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -1,15 +1,24 @@
+:root {
+    --main-bg-color: #f4f4f4;
+    --container-bg-color: white;
+    --input-bg-color: #f1f1f1;
+    --input-bg-color-focus: #ddd;
+    --btn-bg-color: #4CAF50;
+    --btn-color: white;
+    --link-color: #4CAF50;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #f4f4f4;
+    background-color: var(--main-bg-color);
 }
 
 .container {
-    width: 300px;
+    width: 500px;
     padding: 16px;
-    background-color: white;
+    background-color: var(--container-bg-color);
     border-radius: 4px;
-    margin: 0 auto;
-    margin-top: 100px;
+    margin: 100px auto 0 auto;
 }
 
 input[type=text], input[type=password] {
@@ -18,41 +27,33 @@ input[type=text], input[type=password] {
     margin: 5px 0 22px 0;
     display: inline-block;
     border: none;
-    background: #f1f1f1;
+    background: var(--input-bg-color);
+}
+
+input[type=text]:focus, input[type=password]:focus {
+    background-color: var(--input-bg-color-focus);
+    outline: none;
+}
+
+.btn, .btn-check {
+    background-color: var(--btn-bg-color);
+    color: var(--btn-color);
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    opacity: 0.9;
+}
+
+.btn {
+    width: 100%;
 }
 
 .btn-check {
     width: 25%;
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    opacity: 0.9;
 }
 
-.btn-check:hover {
-    opacity: 1;
-}
-
-input[type=text]:focus, input[type=password]:focus {
-    background-color: #ddd;
-    outline: none;
-}
-
-.btn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    opacity: 0.9;
-}
-
-.btn:hover {
+.btn:hover, .btn-check:hover {
     opacity: 1;
 }
 
@@ -61,7 +62,7 @@ input[type=text]:focus, input[type=password]:focus {
 }
 
 .login-text a {
-    color: #4CAF50;
+    color: var(--link-color);
     text-decoration: none;
 }
 
