--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,26 +2,37 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Login</title>
-  <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<div>
-  <form th:action="@{/login}" method="post">
-    <div class="container">
-      <div>
-        <label for="username"><b>Username</b></label>
-        <input type="text" id="username" placeholder="Enter Username" name="username" required>
-      </div>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <nav class="navbar d-flex justify-content-center">
+        <a class="navbar-brand mr-0" href="#" th:href="@{/}">My App</a>
+      </nav>
+      <h2 class="text-center my-4">Login</h2>
+      <form th:action="@{/login}" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 
-      <div>
-        <label for="password"><b>Password</b></label>
-        <input type="password" id="password" placeholder="Enter Password" name="password" required>
-      </div>
+        <div class="form-group">
+          <label for="username"><b>Username</b></label>
+          <input type="text" id="username" placeholder="Enter Username" name="username" required class="form-control">
+        </div>
 
-      <button type="submit" class="btn">Login</button>
-      <p class="signup-text">Don't have an account? <a href="/signup">Sign up</a></p>
+        <div class="form-group">
+          <label for="password"><b>Password</b></label>
+          <input type="password" id="password" placeholder="Enter Password" name="password" required class="form-control">
+        </div>
+
+        <button type="submit" class="btn btn-primary">Login</button>
+        <p class="signup-text my-3">Don't have an account? <a href="/signup">Sign up</a></p>
+      </form>
     </div>
-  </form>
+  </div>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
