--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,7 +9,11 @@
 <div th:insert="~{fragments :: header}"></div>
 <h1>Welcome, <span th:text="${#authentication.getName()}"></span></h1>
 <div th:insert="~{fragments :: footer}"></div>
+<script th:inline="javascript">
+    let accessToken = /*[[${accessToken}]]*/ '';
 
+    console.log('Access Token : ', accessToken);
+</script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
