--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -14,19 +14,24 @@
 
       <!-- 편집 모드가 활성화되면 편집 가능한 필드만 표시 -->
       <div th:if="${editingEnabled}">
+        <!-- 사용자명과 이메일을 위한 입력 필드 -->
         <form th:action="@{/profile}" th:object="${usersEditDTO}" method="post">
+          <div th:if="${param.usernameError != null or param.emailError != null}">
+            <span class="text-danger" th:text="${param.usernameError != null ? param.usernameError[0] : ''}"></span>
+            <span class="text-danger" th:text="${param.emailError != null ? param.emailError[0] : ''}"></span>
+          </div>
           <!-- 사용자명과 이메일을 위한 입력 필드 -->
           <div class="form-group">
             <label for="username">사용자명:</label>
-            <input type="text" class="form-control" th:field="*{username}" id="username">
+            <input type="text" class="form-control" th:field="*{username}" id="username" required>
           </div>
           <div class="form-group">
             <label for="email">이메일:</label>
-            <input type="email" class="form-control" id="email" th:field="*{email}">
+            <input type="email" class="form-control" id="email" th:field="*{email}" required>
           </div>
           <div class="form-group">
             <label for="password">비밀번호:</label>
-            <input type="password" class="form-control" id="password" th:field="*{password}">
+            <input type="password" class="form-control" id="password" th:field="*{password}" required>
           </div>
           <!-- 저장과 취소 버튼 -->
           <button type="submit" class="btn btn-primary">저장</button>
@@ -36,8 +41,8 @@
 
       <!-- 편집 모드가 비활성화되면 편집 불가능한 필드만 표시 -->
       <div th:unless="${editingEnabled}">
-        <h3>사용자명: <span th:text="${user.getUsername()}"></span></h3>
-        <h3>이메일: <span th:text="${user.email}"></span></h3>
+        <h3>사용자명: <span th:text="${user != null ? user.getUsername() : ''}"></span></h3>
+        <h3>Email: <span th:text="${user != null ? user.getEmail() : ''}"></span></h3>
       </div>
       <hr/>
 
