--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -32,5 +32,12 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script type="text/javascript">
+  let urlParams = new URLSearchParams(window.location.search);
+
+  if (urlParams.has("error")) {
+    alert("알 수 없는 이유로 로그아웃 되었습니다. 다시 로그인 해주세요.");
+  }
+</script>
 </body>
 </html>
