회원가입 시 프로필 사진 기능 추가 header에 프로필 텍스트 대신 이미지로 대체

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -51,7 +51,9 @@
             <i class="fas fa-bell"></i>3</span>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" th:href="@{/profile}">Profile</a>
+            <button class="nav-item bg-transparent" style="padding:0; border: none;">
+              <img src="path_to_default_image" th:src="@{'/' + ${profileImage.filePath}}" alt="Profile Image" style="width:40px;height:40px;border-radius:50%;">
+            </button>
           </li>
           <li class="nav-item">
             <form th:action="@{/logout}" method="post">
