--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -51,7 +51,7 @@
             <i class="fas fa-bell"></i>3</span>
           </li>
           <li class="nav-item">
-            <button class="nav-item bg-transparent" style="padding:0; border: none;">
+            <button class="nav-item bg-transparent" style="padding:0; border: none;" onclick="window.location.href='/profile'">
               <img src="path_to_default_image" th:src="@{'/' + ${profileImage.filePath}}" alt="Profile Image" style="width:40px;height:40px;border-radius:50%;">
             </button>
           </li>
