--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -52,7 +52,7 @@
           </li>
           <li class="nav-item">
             <button class="nav-item bg-transparent" style="padding:0; border: none;" onclick="window.location.href='/profile'">
-              <img src="path_to_profile_image" th:src="${profileImage.filePath}" alt="Profile Image" style="width:40px;height:40px;border-radius:50%;">
+              <img src="path_to_profile_image" th:src="${profileImage}" alt="Profile Image" style="width:40px;height:40px;border-radius:50%;">
             </button>
           </li>
           <li class="nav-item">
