--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,7 +13,7 @@
 <body>
 <div th:fragment="header">
   <nav class="navbar navbar-expand-lg border-bottom">
-    <a class="navbar-brand" href="#" th:href="@{/}">My App</a>
+    <a class="navbar-brand" href="#" th:href="@{/static}">My App</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
