--- a/src/main/resources/templates/board/community.html
+++ b/src/main/resources/templates/board/community.html
@@ -18,7 +18,9 @@
 <div class="container mt-4">
     <div class="row">
         <div class="col-md-12 d-flex justify-content-between">
-            <a href="/community/new" class="btn btn-primary">작성하기</a>
+            <a sec:authorize="isAuthenticated()" th:href="@{/community/new}" class="btn btn-primary">작성하기</a>
+            <!-- 인증 받지 않은 사용자라면 공간만 차지 -->
+            <div sec:authorize="isAnonymous()" style="flex: 1"></div>
             <div class="dropdown">
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="sortDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     최신순
@@ -32,20 +34,20 @@
             </div>
         </div>
     </div>
-    <div th:each="board : ${boardListResponseDTO}" class="py-4">
-        <div class="flex flex-col">
+    <ul th:each="board : ${paging}" class="py-4">
+        <li class="flex flex-col">
             <!-- 프로필 사진 및 사용자 이름 -->
             <div class="flex shrink-0 items-center gap-x-1">
                 <a th:href="@{'#'}">
-                    <img th:src="${board.profileImgPath}" alt="프로필 사진" class="h-5 w-5 rounded-full">
+                    <img th:src="${board.users.profileImage.filePath}" alt="프로필 사진" class="h-5 w-5 rounded-full">
                 </a>
                 <a class="truncate pl-1 text-xs font-normal text-gray-700 hover:text-blue-500 dark:text-gray-300 dark:hover:text-blue-200 sm:text-sm"
-                   th:href="@{'#'}" th:text="${board.username}"></a>
+                   th:href="@{'#'}" th:text="${board.users.username}"></a>
             </div>
             <!-- 게시글 제목 -->
             <div class="my-2">
                 <a class="line-clamp-1 w-fit truncate whitespace-normal break-all text-sm font-semibold leading-6 text-gray-900 hover:text-blue-500 dark:text-gray-100 dark:hover:text-blue-200 sm:text-base"
-                   th:href="@{'/articles/' + ${board.articleId}}" th:text="${board.title}"></a>
+                   th:href="@{'#'}" th:text="${board.title}"></a>
             </div>
             <div class="flex">
                 <div class="flex items-center gap-x-2 text-gray-700 dark:text-gray-300">
@@ -83,8 +85,8 @@
                         <span class="sr-only">likes</span>
                     </div>
                 </div>
-            </div>
-        </div>
+            </li>
+        </ul>
     </div>
 
     <!-- Pagination placeholder -->
