--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -29,7 +29,7 @@
         <button class="btn btn-outline-success my-2 my-sm-0 mr-5" type="submit">Search</button>
       </form>
 
-      <div th:unless="${#authentication.principal}">
+      <div sec:authorize="isAnonymous()">
         <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="#" th:href="@{/login}">Login</a>
@@ -39,7 +39,7 @@
             </li>
         </ul>
       </div>
-      <div th:if="${#authentication.principal}">
+      <div sec:authorize="isAuthenticated()">
         <ul class="navbar-nav">
           <li class="nav-item justify-content-center" style="position: relative">
             <button class="btn bd-0 mr-3 mt-1 p-0">
