--- a/src/main/resources/templates/board/community.html
+++ b/src/main/resources/templates/board/community.html
@@ -15,6 +15,11 @@
         <p class="lead">Join our community and share your thoughts.</p>
     </div>
 </div>
+<style>
+    div.flex.flex-row {
+        display: flex;
+    }
+</style>
 <div class="container mt-4">
     <div class="row">
         <div class="col-md-12 d-flex justify-content-between">
@@ -35,11 +40,12 @@
         </div>
     </div>
     <ul th:each="board : ${paging}" class="py-4">
-        <li class="flex flex-col">
+        <!-- board 관련은 board. 해서 쓰고 profileImg 관련은 board.profilePath user 관련은 board.users -->
+        <li class="flex flex-col border-top">
             <!-- 프로필 사진 및 사용자 이름 -->
             <div class="flex shrink-0 items-center gap-x-1">
                 <a th:href="@{'#'}">
-                    <img th:src="${board.users.profileImage.filePath}" alt="프로필 사진" class="h-5 w-5 rounded-full">
+                    <img th:src="${board.profilePath.path}" alt="프로필 사진" style="width: 30px; height: 30px;" class="h-5 w-5 rounded-full">
                 </a>
                 <a class="truncate pl-1 text-xs font-normal text-gray-700 hover:text-blue-500 dark:text-gray-300 dark:hover:text-blue-200 sm:text-sm"
                    th:href="@{'#'}" th:text="${board.users.username}"></a>
@@ -50,22 +56,22 @@
                    th:href="@{'#'}" th:text="${board.title}"></a>
             </div>
             <div class="flex">
-                <div class="flex items-center gap-x-2 text-gray-700 dark:text-gray-300">
+                <div class="flex flex-row items-center justify-content-end gap-x-2 text-gray-700 dark:text-gray-300">
                     <!-- 조회수 -->
                     <div class="inline-flex items-center space-x-0.5 text-xs sm:text-sm">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" class="h-5 w-5">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" style="width: 20px; height: 20px;" class="h-5 w-5">
                             <!-- 아이콘 경로 -->
                             <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 010-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963
                             7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178z"></path>
                             <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
                         </svg>
-                        <span class="font-medium" th:text="${board.hits}"></span>
+                        <span class="font-medium mr-2" th:text="${board.hits}"></span>
                         <span class="sr-only">views</span>
                     </div>
                     <!-- 댓글 수 -->
-                    <span class="font-medium">291.9k</span><span class="sr-only">views</span></div>
+                    <span class="font-medium"></span><span class="sr-only">views</span>
                     <div class="inline-flex items-center space-x-0.5 text-xs sm:text-sm">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" class="h-5 w-5">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" style="width: 20px; height: 20px;" class="h-5 w-5">
                             <!-- 아이콘 경로 -->
                             <path stroke-linecap="round" stroke-linejoin="round" d="M8.625 9.75a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0H8.25m4.125 0a.375.375 0 11-.75 0
                             .375.375 0 01.75 0zm0 0H12m4.125 0a.375.375 0 11-.75 0 .375.375 0 01.75 0zm0 0h-.375m-13.5 3.01c0 1.6 1.123 2.994 2.707 3.227 1.087.16 2.185.283 3.293.369V21l4.184-4.183a1.14 1.14 0
@@ -76,19 +82,23 @@
                         <span class="sr-only">comments</span>
                     </div>
                     <!-- 좋아요 수 -->
-                    <div class="inline-flex items-center -space-x-0.5 text-xs sm:text-sm">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" class="h-5 w-5">
-                            <!-- 아이콘 경로 -->
-                            <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 15L12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"></path>
+                    <div class="inline-flex items-center space-x-0.5 text-xs sm:text-sm">
+<!--                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" style="width: 20px; height: 20px;" class="h-5 w-5">-->
+<!--                            &lt;!&ndash; 아이콘 경로 &ndash;&gt;-->
+<!--                            <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 15L12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"></path>-->
+
+<!--                        </svg>-->
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" stroke-width="0.3" stroke="currentColor" aria-hidden="true" viewBox="-3 -3 14 24" style="width: 22px; height: 22px;" class="h-5 w-5">
+                            <path d="M8.864.046C7.908-.193 7.02.53 6.956 1.466c-.072 1.051-.23 2.016-.428 2.59-.125.36-.479 1.013-1.04 1.639-.557.623-1.282 1.178-2.131 1.41C2.685 7.288 2 7.87 2 8.72v4.001c0 .845.682 1.464 1.448 1.545 1.07.114 1.564.415 2.068.723l.048.03c.272.165.578.348.97.484.397.136.861.217 1.466.217h3.5c.937 0 1.599-.477 1.934-1.064a1.86 1.86 0 0 0 .254-.912c0-.152-.023-.312-.077-.464.201-.263.38-.578.488-.901.11-.33.172-.762.004-1.149.069-.13.12-.269.159-.403.077-.27.113-.568.113-.857 0-.288-.036-.585-.113-.856a2.144 2.144 0 0 0-.138-.362 1.9 1.9 0 0 0 .234-1.734c-.206-.592-.682-1.1-1.2-1.272-.847-.282-1.803-.276-2.516-.211a9.84 9.84 0 0 0-.443.05 9.365 9.365 0 0 0-.062-4.509A1.38 1.38 0 0 0 9.125.111L8.864.046zM11.5 14.721H8c-.51 0-.863-.069-1.14-.164-.281-.097-.506-.228-.776-.393l-.04-.024c-.555-.339-1.198-.731-2.49-.868-.333-.036-.554-.29-.554-.55V8.72c0-.254.226-.543.62-.65 1.095-.3 1.977-.996 2.614-1.708.635-.71 1.064-1.475 1.238-1.978.243-.7.407-1.768.482-2.85.025-.362.36-.594.667-.518l.262.066c.16.04.258.143.288.255a8.34 8.34 0 0 1-.145 4.725.5.5 0 0 0 .595.644l.003-.001.014-.003.058-.014a8.908 8.908 0 0 1 1.036-.157c.663-.06 1.457-.054 2.11.164.175.058.45.3.57.65.107.308.087.67-.266 1.022l-.353.353.353.354c.043.043.105.141.154.315.048.167.075.37.075.581 0 .212-.027.414-.075.582-.05.174-.111.272-.154.315l-.353.353.353.354c.047.047.109.177.005.488a2.224 2.224 0 0 1-.505.805l-.353.353.353.354c.006.005.041.05.041.17a.866.866 0 0 1-.121.416c-.165.288-.503.56-1.066.56z"/>
                         </svg>
                         <span class="font-medium" th:text="${board.likeCnt}"></span>
                         <span class="sr-only">likes</span>
                     </div>
                 </div>
-            </li>
-        </ul>
-    </div>
-
+            </div>
+        </li>
+    </ul>
+</div>
     <!-- Pagination placeholder -->
     <div class="row mt-4">
         <div class="col-md-12">
@@ -103,10 +113,9 @@
             </nav>
         </div>
     </div>
-</div>
 <div th:insert="~{fragments :: footer}"></div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"></script>
+
 </body>
 </html>
