--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -9,11 +9,16 @@
           crossorigin="anonymous"
           referrerpolicy="no-referrer" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
+<!--  <link rel="preconnect" href="https://fonts.googleapis.com">-->
+<!--  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>-->
+<!--  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding:wght@700&display=swap" rel="stylesheet">-->
+
+
 </head>
 <body>
 <div th:fragment="header">
   <nav class="navbar navbar-expand-lg border-bottom">
-    <a class="navbar-brand" href="#" th:href="@{/static}">My App</a>
+    <a class="navbar-brand" href="#" th:href="@{/}">My App</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -31,12 +36,12 @@
 
       <div sec:authorize="isAnonymous()">
         <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#" th:href="@{/login}">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#" th:href="@{/signup}">Sign Up</a>
-            </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" th:href="@{/login}">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" th:href="@{/signup}">Sign Up</a>
+          </li>
         </ul>
       </div>
       <div sec:authorize="isAuthenticated()">
@@ -47,7 +52,7 @@
                 <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zm.995-14.901a1 1 0 1 0-1.99 0A5.002 5.002 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901z"/>
               </svg>
             </button>
-            <span class="badge badge-danger" style="position: absolute; top: 0; right: 0; transform: translate(-20%, -30%);">
+            <span class="badge bg-primary rounded-pill" style="position: absolute; top: 0; right: 0; transform: translate(-20%, -30%); color: aliceblue">
             <i class="fas fa-bell"></i>3</span>
           </li>
           <li class="nav-item">
@@ -90,7 +95,6 @@
     </div>
   </footer>
 </div>
-
 
 </body>
 </html>
