--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Registration Page</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <div th:insert="~{fragments :: linkCSS}"></div>
 </head>
 <body>
 <div class="container">
@@ -52,8 +52,8 @@
   </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<div th:insert="~{fragments :: footer}"></div>
+<div th:insert="~{fragments :: linkJS}"></div>
 
 <script th:inline="javascript">
   document.getElementById("username-check").addEventListener("click", function() {
