--- a/src/main/resources/templates/board/post.html
+++ b/src/main/resources/templates/board/post.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>게시글 작성</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <div th:insert="~{fragments :: linkCSS}"></div>
 </head>
 <body>
 <div class="container mt-4">
@@ -40,9 +40,7 @@
     </form>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<div th:insert="~{fragments :: linkJS}"></div>
 <script>
     // 파일 미리보기 및 삭제 로직
     document.getElementById('boardImage').addEventListener('change', function() {
