--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Login</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <div th:insert="~{fragments :: linkCSS}"></div>
 </head>
 <body>
 <div class="container">
@@ -30,8 +30,8 @@
   </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<div th:insert="~{fragments :: footer}"></div>
+<div th:insert="~{fragments :: linkJS}"></div>
 <script type="text/javascript">
   let urlParams = new URLSearchParams(window.location.search);
 
